# periodicsynth

./: .travis.yml  Cargo.toml  PlannedFeatures.md  README.md
src/: common.rs  lib.rs
