[package]
name = "periodicsynth"
description = "Simple pereodic function snythesizer for Sine, Square, Triangle, Sawtooth waves with arbitary frequency."
readme = "README.md"
version = "0.1.3"
categories = ["multimedia", "multimedia::audio"]
keywords = ["snythesizer", "audio", "oscillator", "dsp", "signal"]
authors = ["nullvideo <bsantanu381@gmail.com>"]
license = "ISC"
edition = "2018"
exclude = ["target/**/*", "*.lock", "*.yml"]
